--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 AS build-stage
+FROM node:16 AS test-stage
 
 WORKDIR /usr/src/app
 
@@ -6,22 +6,20 @@ COPY . .
 
 RUN npm ci
 
-ENV CI=true
+RUN CI=true npm run test
 
-RUN npm run test
-
-FROM build-stage as build
+FROM test-stage as app-frontend
 
 COPY . .
 
 RUN npm ci
 
-ENV REACT_APP_BACKEND_URL=http://localhost:3000
+# ENV REACT_APP_BACKEND_URL=http://localhost:3000
 
 RUN npm run build
 
-#  Needs to be run with `$ docker run -p 8000:80 todo-frontend`
+#  Needs to be run with `$ docker run -p 8000:80 app-frontend`
 FROM nginx:1.20-alpine
 
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=app-frontend /usr/src/app/build /usr/share/nginx/html
 
