--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -3,19 +3,19 @@ services:
     image: app-frontend
     build:
       context: ./todo-frontend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./todo-frontend/:/usr/src/app
     ports:
       - 3001:3000
     environment:
-      - REACT_APP_BACKEND_URL=http://localhost:3000
+      - REACT_APP_BACKEND_URL=/api/
 
   app-backend:
     image: app-backend
     build:
       context: ./todo-backend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./todo-backend/:/usr/src/app
     ports:
