--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -14,11 +14,11 @@ http {
       proxy_set_header Connection 'upgrade';
       
       # Requests are directed to http://localhost:3000
-      proxy_pass http://dev-frontend:3000;
+      proxy_pass http://app-frontend;
     }
 
     location /api/ {
-      proxy_pass http://todo-backend-dev:3000/api/;
+      proxy_pass http://app-backend:3000/api/;
     }
   }
 }
