--- a/my-app/backend/package.json
+++ b/my-app/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack-osa3",
+  "name": "puhelinluettelo-backend",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
