--- a/my-app/frontend/package.json
+++ b/my-app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puhelinluettelo",
+  "name": "puhelinluettelo-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,6 +35,5 @@
   },
   "devDependencies": {
     "json-server": "^0.16.2"
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
