--- a/my-app/nginx.conf
+++ b/my-app/nginx.conf
@@ -16,7 +16,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://my-app-backend:3001/;
+            proxy_pass http://my-app-backend:3001/api/;
         }
     }
 }
