--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -3,24 +3,24 @@ services:
     image: my-app-frontend
     build:
       context: ./frontend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./frontend/:/usr/src/app
     ports:
       - 3000:3000
     environment:
-      - REACT_APP_BACKEND_URL=http://localhost:3001/api/
+      - REACT_APP_BACKEND_URL=/api/
     stdin_open: true
 
   my-app-backend:
     image: my-app-backend
     build:
       context: ./backend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./backend/:/usr/src/app
     ports:
-      - 3001:3001
+      - 3001:3000
 
   nginx:
     image: nginx:1.20.1
